--- a/config.json
+++ b/config.json
@@ -1,4 +1,8 @@
 {
-  "openai_key": "",
-  "modules": ["auth/sign_in", "auth/sign_up", "beranda"]
+    "openai_key": "",
+    "modules": [
+        "auth/sign_in",
+        "auth/sign_up",
+        "beranda"
+    ]
 }
