--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
-    "openai_key": "",
-    "modules": [
-        "auth/sign_in",
-        "auth/sign_up",
-        "beranda"
-    ]
+  "openai_key": "",
+  "modules": [
+    "auth/sign_in",
+    "auth/sign_up/data_akun",
+    "auth/sign_up/data_diri",
+    "beranda"
+  ]
 }
