--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_core: ^2.5.0
   firebase_auth: ^4.2.6
   google_sign_in: ^5.4.4
+  cloud_firestore: ^4.4.2
+  change_app_package_name: ^1.1.0
+  hive: ^2.2.3
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
