--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   change_app_package_name: ^1.1.0
   hive: ^2.2.3
   path_provider: ^2.0.12
+  fancy_shimmer_image: ^2.0.2
 
 dev_dependencies:
   flutter_test:
