change name module materi limas

--- a/config.json
+++ b/config.json
@@ -5,10 +5,10 @@
     "auth/sign_up/data_akun",
     "auth/sign_up/data_diri",
     "auth/sign_up/data_diri",
-    "materi/limas/bagian",
-    "materi/limas/jaring",
-    "materi/limas/rumus",
-    "materi/limas/latihan",
+    "materi/limas/bagian_limas",
+    "materi/limas/jaring_limas",
+    "materi/limas/rumus_limas",
+    "materi/limas/latihan_limas",
     "evaluasi",
     "informasi",
     "profil",
