--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   hive: ^2.2.3
   path_provider: ^2.0.12
   fancy_shimmer_image: ^2.0.2
+  skeletons: ^0.0.3
 
 dev_dependencies:
   flutter_test:
