--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.0.12
   fancy_shimmer_image: ^2.0.2
   skeletons: ^0.0.3
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
