--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   fancy_shimmer_image: ^2.0.2
   skeletons: ^0.0.3
   youtube_player_flutter: ^8.1.2
+  lottie: ^2.2.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +77,7 @@ flutter:
     - assets/logo/
     - assets/materi/
     - assets/icon/update/
+    - assets/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
