slicing evaluasi done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   lottie: ^2.2.0
   http: ^0.13.5
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
