evaluasi + fetch data in profil done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   lottie: ^2.2.0
   http: ^0.13.5
   percent_indicator: ^4.2.3
+  firebase_storage: ^11.0.15
+  image_picker: ^0.8.7
+  easy_image_viewer: ^1.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
