--- a/config.json
+++ b/config.json
@@ -26,6 +26,7 @@
     "evaluasi/ringkasan_evaluasi",
     "evaluasi/hasil_evaluasi",
     "profil",
+    "onboarding",
     "menu_nav",
     "beranda"
   ]
