--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   image_picker: ^0.8.7
   easy_image_viewer: ^1.2.0
   intl: ^0.17.0
+  onboarding: ^3.1.0
 
 dev_dependencies:
   flutter_test:
